# richmiles.xyz

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CNAME  Caddyfile  Dockerfile  Makefile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json  script.js  styles.css  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  ephemeral-staging.yml  promote-production.yml
backend/: config.py  logging_config.py  main.py  portfolio_content.py  portfolio_schemas.py  pyproject.toml  requirements.txt
backend/tests/: test_api.py
content/posts/: auth0-integration.mdx  ios-development.mdx  shamir-secret-sharing.mdx
css/: categories.css  skill-mastery.css  skills-modal.css  skills.css
data/categories/: databases.json  devops.json  languages.json
data/skills/: _overview.json  azuredevops.json  deepseek.json  jenkins.json  kubernetes.json  python.json  sqlalchemy.json  sqlserver.json
deploy/: pack.toml  screens.toml
docs/: deploy.md
js/: categories.js  skill-mastery.js  skills-data.js  skills-modal.js  skills-module.js
js/categories/: ai.json  databases.json  devops.json  frameworks.json  languages.json
js/skills/: azuresql.json  chatgpt.json  claude.json  csharp.json  docker.json  entityframeworkcore.json  fastapi.json  gemini.json  github.json  githubactions.json  jenkins.json  kubernetes.json  llm.json  mysql.json  postgresql.json  (+9 more)
legacy/: index.html
public/: styles.css
scripts/: check_contract.py
sections/: category-template.html  skills-modal.html  skills.html
src/: App.tsx
(+39 files in other folders)
